# springs-abm

./: .gitignore  README.md  __init__.py  calibration.py  config.py  dashboard.py  exp1_rota_tipping.py  exp2_campy_tipping.py  exp3_vaccination.py  exp4_cost_of_care.py  exp5_cpt_vs_ev.py  exp6_shock_frequency.py  inspect_grid.py  main.py  model-reference.html  pyproject.toml  requirements.txt  run_viz.py  sensitivity.py
abm/: agent_graph.py  constants.py  state.py
abm/agent/: agent_update.py  health_cpt_utils.py  illness_mechanics.py
abm/agentInteraction/: weight_update.py
abm/data/: water_sampling_points.csv
abm/environment/: animal_density.py  grid_assignment.py  grid_creation.py  grid_environment.py  grid_generator.py
abm/factories/: __init__.py  agent_factory.py  environment_factory.py
abm/model/: data_collection.py  initialize_model.py  model_output.py  step.py
abm/network/: network_creation.py
agent/: health_cpt_utils.py
agentInteraction/: weight_update.py
environment/: grid_assignment.py  grid_creation.py  grid_generator.py
experiments/: __init__.py  metrics.py  orchestrator.py
model/: data_collection.py  initialize_model.py  step.py
network/: global_attachment.py  link_deletion.py  local_attachment.py  local_attachment_basic_homophily.py  local_attachment_tensor.py  network_creation.py  random_edge_noise.py
notebooks/: ghana_data.ipynb  testing.ipynb
policy_computation/: engine.py  generator.py  sweep_runner.py
simulation_analysis/: experiment_config.py  intervention_sweep.py  plots.py
tests/: verification_suite.py
(+24 files in other folders)
